Fixed: Bug 57682 - Scrolling in month view on mobile device not possible
Use next/prev buttons to navigate over months

--- a/ui/apps/io.ox/calendar/month/style.less
+++ b/ui/apps/io.ox/calendar/month/style.less
@@ -52,6 +52,14 @@
         .overflow-y(scroll);
         .backface-visibility(hidden);
 
+        .smartphone & {
+            overflow: hidden;
+
+            .month {
+                height: ~"calc(100% - 100px)";
+            }
+        }
+
         .month {
             width: 100%;
         }
